<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"/>
    <item
        android:id="@+id/action_achievements"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/achievements"/>
    <item
        android:id="@+id/action_leaderboard"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/leaderboard"/>
    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/faq"/>
    <item
        android:id="@+id/action_split_count"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/split_count"/>
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/about"/>

</menu>